--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
@@ -13,7 +13,7 @@
     formControlName="email"
     placeholder="Email"
     type="email" />
-  <app-rating-control [disabled]="true" formControlName="rating" />
+  <app-rating-control formControlName="rating" />
   <textarea
     class="feedback-form--control"
     formControlName="comment"
