Emails matching validatror was added

--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
@@ -12,7 +12,14 @@
     class="feedback-form--control"
     formControlName="email"
     placeholder="Email"
-    type="email" />
+    type="email"
+    [class.not-match]="feedbackForm.hasError('emailsNotMatch')" />
+  <input
+    class="feedback-form--control"
+    formControlName="emailConfirmation"
+    placeholder="Confirm your email"
+    type="email"
+    [class.not-match]="feedbackForm.hasError('emailsNotMatch')" />
   <app-rating-control formControlName="rating" />
   <textarea
     class="feedback-form--control"
