--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
@@ -34,7 +34,8 @@
       background: #fff;
     }
 
-    &.ng-invalid.ng-touched {
+    &.ng-invalid.ng-touched,
+    &.ng-touched.not-match {
       border: 3px solid #ff0000;
     }
   }
