Links to resources were added

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,6 +2,14 @@
   <ul>
     <li>
       <a href="">Control Value Accessor</a>
+      <ul>
+        <li>
+          <a href="https://github.com/sasha-si/angular-challenges/tree/master/src/app/challenges/41-control-value-accessor" target="_blank">Code in GitHub</a>
+        </li>
+        <li>
+          <a href="https://angular-challenges.vercel.app/challenges/forms/41-control-value-accessor/" target="_blank">The challenge description itself</a>
+        </li>
+      </ul>
     </li>
   </ul>
 </nav>
