--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,13 +1,23 @@
 <nav>
   <ul>
     <li>
-      <a href="">Control Value Accessor</a>
+      <a class="sidenav--item" href="">Control Value Accessor</a>
       <ul>
         <li>
-          <a href="https://github.com/sasha-si/angular-challenges/tree/master/src/app/challenges/41-control-value-accessor" target="_blank">Code in GitHub</a>
+          <a
+            class="sidenav--item--link"
+            href="https://github.com/sasha-si/angular-challenges/tree/master/src/app/challenges/41-control-value-accessor"
+            target="_blank">
+            Code in GitHub
+          </a>
         </li>
         <li>
-          <a href="https://angular-challenges.vercel.app/challenges/forms/41-control-value-accessor/" target="_blank">The challenge description itself</a>
+          <a
+            class="sidenav--item--link"
+            href="https://angular-challenges.vercel.app/challenges/forms/41-control-value-accessor/"
+            target="_blank">
+            The challenge description itself
+          </a>
         </li>
       </ul>
     </li>
