--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
@@ -18,11 +18,17 @@
     margin-bottom: 20px;
     font-size: 24px;
   }
+
+  &--error-message {
+    font-size: 12px;
+    color: #ff0000;
+    padding: 5px 20px;
+  }
   
   &--control {
     max-height: 200px;
     margin-bottom: 20px;
-    padding: 12px 12px 12px 20px;
+    padding: 12px 20px;
     border-radius: 10px;
     background-color: #fbfbfb;
     color: #3c3c3c;
