--- a/src/app/sidenav/sidenav.component.less
+++ b/src/app/sidenav/sidenav.component.less
@@ -7,10 +7,19 @@
     
     li {
       list-style-type: none;
-  
+
       a {
         text-decoration: none;
+      }
+  
+      .sidenav--item {
         color: #333333;
+
+        &--link {
+          font-size: 12px;
+          color: #ff5e00;
+          padding: 5px 0;
+        }
       }
     }
   }
