added validation to rating control depends on both email fields + error message

--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
@@ -55,11 +55,10 @@
     class="feedback-form--control"
     formControlName="emailConfirmation"
     placeholder="Confirm your email"
-    type="email"
+    type="password"
     [class.not-match]="feedbackForm.hasError('emailsNotMatch')" />
 
   <!-- Rating FeedbackFormControl -->
-  <!-- {{feedbackForm.get(FeedbackFormKeys.rating)?.errors | json}} -->
   <app-rating-control formControlName="rating" />
 
   <!-- Comment FeedbackFormControl -->
