--- a/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.less
+++ b/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.less
@@ -2,6 +2,13 @@
   display: flex;
   justify-content: center;
   padding: 0 10px;
+  
+  &--error-message {
+    font-size: 12px;
+    color: #ff0000;
+    padding: 5px 10px;
+    text-align: center;
+  }
 
   &:hover {
     .star {
