added cursor: not-allowed to rating when it disabled

--- a/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.less
+++ b/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.less
@@ -13,6 +13,11 @@
   &:hover {
     .star {
       fill: #ffd055;
+
+      &.disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
     }
   }
 }
