--- a/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.html
+++ b/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.html
@@ -15,6 +15,7 @@
   @for (item of [].constructor(5); track $index) {
     <svg
       class="star"
+      [class.disabled]="disabled()"
       [class.star-active]="isStarActive($index, value)"
       (click)="setRating($index)">
       <use xlink:href="#star"></use>
