--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
@@ -68,13 +68,32 @@
     placeholder="Сomment text">
   </textarea>
 
+  <!-- Extra controls array -->
+  <div formArrayName="extraControls">
+    @for (extraControl of extraControls.controls; track $index; let i = $index) {
+      <input
+        id="extra-control-{{ i }}"
+        class="feedback-form--control"
+        type="text"
+        [formControlName]="i"
+      />
+    }
+    
+    <button
+      class="button feedback-form--add-input"
+      type="button"
+      (click)="addExtraControl()">
+        Add your field
+    </button>
+  </div>
+
   <button
-    class="feedback-form--submit"
+    class="button feedback-form--submit"
     type="submit"
     [disabled]="
       !feedbackForm.touched || feedbackForm.invalid
     ">
-    Submit
+      Submit
   </button>
   
 </form>
