--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
@@ -26,6 +26,7 @@
   }
   
   &--control {
+    width: 100%;
     max-height: 200px;
     margin-bottom: 20px;
     padding: 12px 20px;
@@ -45,17 +46,28 @@
       border: 3px solid #ff0000;
     }
   }
+
+  &--add-input {
+    background-color: #f5a2a2;
+    margin-bottom: 20px;
+    width: fit-content;
+    padding: 5px 10px;
+  }
   
   &--submit {
     padding: 10px;
     background-color: #054ada;
-    color: #ffffff;
-    font-size: 18px;
-    cursor: pointer;
-  
+    
     &[disabled] {
       background-color: #cccccc;
       color: #ffffff;
     }
   }
+}
+
+.button {
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #3c3c3c;
 }
