--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.html
@@ -70,6 +70,7 @@
 
   <!-- Extra controls array -->
   <div formArrayName="extraControls">
+    <div>Extra fields</div>
     @for (extraControl of extraControls.controls; track $index; let i = $index) {
       <input
         id="extra-control-{{ i }}"
