--- a/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
+++ b/src/app/challenges/41-control-value-accessor/feedback-form/feedback-form.component.less
@@ -47,11 +47,19 @@
     }
   }
 
-  &--add-input {
-    background-color: #f5a2a2;
-    margin-bottom: 20px;
-    width: fit-content;
-    padding: 5px 10px;
+  &--extra-controls {
+
+    &--title {
+      font-size: 14px;
+      padding: 0 20px 5px;
+    }
+
+    &--add-input {
+      background-color: #f5a2a2;
+      margin-bottom: 20px;
+      width: fit-content;
+      padding: 5px 10px;
+    }
   }
   
   &--submit {
