--- a/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.html
+++ b/src/app/challenges/41-control-value-accessor/rating-control/rating-control.component.html
@@ -6,7 +6,7 @@
 </svg>
 
 @if (disabled()) {
-  <div class="rating--error-message">
+  <div class="rating--hint-message">
     To rate, set valid email fields
   </div>
 }
